--- a/index.html
+++ b/index.html
@@ -1,375 +1,279 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Now Playing</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Music Player</title>
 
 <style>
+:root {
+  --mono-white: #ffffff;
+  --mono-gray: #888;
+  --mono-dark: #111;
+}
+
 body {
   margin: 0;
+  background: #000;
+  color: var(--mono-white);
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-  background: #111;
-  color: #fff;
 }
 
-/* ===== ヘッダー ===== */
-.header {
-  position: fixed;
-  top: 12px;
-  right: 16px;
-  z-index: 40;
-}
-.menu-btn {
-  font-size: 26px;
-  cursor: pointer;
-}
-
-/* ===== プレイリスト ===== */
-.playlist {
-  position: fixed;
-  top: 0;
-  right: -100%;
-  width: 260px;
-  height: 100%;
-  background: #181818;
-  padding: 20px;
-  transition: right 0.35s ease;
-  z-index: 35;
-}
-.playlist.open { right: 0; }
-.track {
-  padding: 10px;
-  border-radius: 6px;
-  cursor: pointer;
-}
-.track.active { background: #333; }
-.track span {
-  display: block;
-  font-size: 12px;
-  color: #aaa;
-}
-
-/* ===== メイン ===== */
-.container {
-  padding: 44px 15px 20px;
-  text-align: center;
-}
-
-.stage {
+.player {
   position: relative;
-  width: 300px;
-  height: 300px;
-  margin: 20px auto;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
-/* ===== 動画 ===== */
-.video {
+/* =====================
+   CD
+===================== */
+.cd {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 220px;
-  height: 124px;
+  width: 260px;
+  height: 260px;
+  border-radius: 50%;
+  background: radial-gradient(#444 30%, #111 60%, #000 70%);
   transform: translate(-50%, -50%);
-  opacity: 1;
-  pointer-events: none;
-  z-index: 1;
-}
-.stage.cd-mini .video {
-  width: 360px;
-  height: 202px;
+  z-index: 3;
+  transition: all 0.6s ease;
 }
 
-/* ===== CD ===== */
-.cd {
+.cd.mini {
+  width: 110px;
+  height: 110px;
+  top: 8%;
+  left: 8%;
+}
+
+/* =====================
+   Video
+===================== */
+.video-wrapper {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transition: all 0.6s ease;
+}
+
+.video-wrapper iframe {
+  width: 90vw;
+  height: 50vw;
+  max-width: 960px;
+  max-height: 540px;
+}
+
+.cd-front .video-wrapper iframe {
+  width: 50vw;
+  height: 28vw;
+  opacity: 0.4;
+}
+
+/* =====================
+   Controls
+===================== */
+.controls {
+  position: absolute;
+  bottom: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  align-items: center;
+  z-index: 5;
+}
+
+/* 曲送り / 戻し */
+.ctrl-btn {
+  width: 44px;
+  height: 44px;
+  background: none;
+  border: none;
+  position: relative;
+  cursor: pointer;
+}
+
+.ctrl-btn::before,
+.ctrl-btn::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border-style: solid;
+}
+
+/* 戻し */
+.prev::before {
+  border-width: 10px 14px 10px 0;
+  border-color: transparent var(--mono-white) transparent transparent;
+  left: 8px;
+}
+.prev::after {
+  width: 4px;
+  height: 20px;
+  background: var(--mono-white);
+  left: 2px;
+  top: 12px;
+}
+
+/* 送り */
+.next::before {
+  border-width: 10px 0 10px 14px;
+  border-color: transparent transparent transparent var(--mono-white);
+  right: 8px;
+}
+.next::after {
+  width: 4px;
+  height: 20px;
+  background: var(--mono-white);
+  right: 2px;
+  top: 12px;
+}
+
+/* =====================
+   Play Button
+===================== */
+.play-wrap {
+  position: relative;
+  width: 90px;
+  height: 90px;
+}
+
+.play-btn {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background: #000;
+  border: 2px solid #fff;
+  position: absolute;
+  inset: 10px;
+  cursor: pointer;
+}
+
+.play-btn.play::before {
+  content: "";
+  position: absolute;
+  left: 28px;
+  top: 20px;
+  border-style: solid;
+  border-width: 15px 0 15px 22px;
+  border-color: transparent transparent transparent #fff;
+}
+
+.play-btn.pause::before,
+.play-btn.pause::after {
+  content: "";
+  position: absolute;
+  top: 18px;
+  width: 8px;
+  height: 34px;
+  background: #fff;
+}
+.play-btn.pause::before { left: 22px; }
+.play-btn.pause::after { right: 22px; }
+
+/* =====================
+   Ring Animation
+===================== */
+.ring {
   position: absolute;
   inset: 0;
   border-radius: 50%;
-  background: url("cd.jpeg") center/cover no-repeat;
-  animation: spin 10s linear infinite;
-  animation-play-state: paused;
-  cursor: pointer;
-  z-index: 5;
-  transition: all 0.45s ease;
-}
-.cd.mini {
-  width: 58px;
-  height: 58px;
-  top: -50px;
-  left: -22px;
+  border: 3px solid transparent;
+  animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
-  from { transform: rotate(0deg); }
-  to   { transform: rotate(360deg); }
+  to { transform: rotate(360deg); }
 }
 
-/* ===== 情報 ===== */
-.title { font-size: 18px; margin-top: 10px; }
-.artist { font-size: 14px; color: #aaa; }
+.ring.c1 { border-color: white; }
+.ring.c2 { border-color: red; }
+.ring.c3 { border-color: #7fffd4; }
+.ring.c4 { border-color: #1e90ff; }
+.ring.c5 { border-color: #9b59b6; }
 
-/* ===== Spotify風コントロール ===== */
-.controls {
-  margin-top: 18px;
+/* =====================
+   Seekbar
+===================== */
+.seek {
+  position: absolute;
+  bottom: 20px;
+  width: 80%;
+  left: 10%;
 }
-
-.control-row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 22px;
-}
-
-/* 共通 */
-.ctrl-btn {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  color: #aaa;
-  transition: color 0.2s, transform 0.2s;
-}
-.ctrl-btn:hover {
-  color: #fff;
-  transform: scale(1.05);
-}
-
-/* 再生ボタン（中央） */
-.play-btn {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  background: #1db954;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.play-btn svg {
-  width: 22px;
-  height: 22px;
-  fill: #000;
-}
-.play-btn:hover {
-  transform: scale(1.08);
-}
-
-/* 前後ボタン */
-.skip svg {
-  width: 26px;
-  height: 26px;
-  fill: currentColor;
-}
-
-/* シークバー */
-.seekbar {
+input[type="range"] {
   width: 100%;
-  margin-top: 16px;
-  -webkit-appearance: none;
-  background: transparent;
-}
-.seekbar::-webkit-slider-runnable-track {
+  appearance: none;
   height: 4px;
   background: #444;
-  border-radius: 2px;
 }
-.seekbar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 12px;
-  height: 12px;
-  background: #1db954;
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  width: 14px;
+  height: 14px;
   border-radius: 50%;
-  margin-top: -4px;
-}
-.seekbar:hover::-webkit-slider-thumb {
-  background: #1ed760;
-}
-
-/* 時間 */
-.time {
-  font-size: 12px;
-  color: #aaa;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 4px;
+  background: white;
 }
 </style>
 </head>
 
 <body>
+<div class="player cd-front">
+  <div class="cd" id="cd"></div>
 
-<div class="header">
-  <div class="menu-btn" onclick="toggleList()">☰</div>
-</div>
-
-<div class="playlist" id="playlist"></div>
-
-<div class="container">
-  <div class="stage">
-    <div id="player" class="video"></div>
-    <div id="cd" class="cd"></div>
+  <div class="video-wrapper">
+    <iframe id="video" src="https://www.youtube.com/embed/VIDEO_ID?enablejsapi=1"></iframe>
   </div>
-
-  <div class="title" id="title"></div>
-  <div class="artist" id="artist"></div>
 
   <div class="controls">
-    <div class="control-row">
-      <button class="ctrl-btn skip" onclick="prev()">
-        <svg viewBox="0 0 24 24"><path d="M6 5v14l8.5-7zM15 5h3v14h-3z"/></svg>
-      </button>
+    <button class="ctrl-btn prev"></button>
 
-      <button class="play-btn" id="playBtn" onclick="toggle()">
-        <svg id="playIcon" viewBox="0 0 24 24">
-          <path d="M8 5v14l11-7z"/>
-        </svg>
-      </button>
-
-      <button class="ctrl-btn skip" onclick="next()">
-        <svg viewBox="0 0 24 24"><path d="M18 5v14l-8.5-7zM6 5h3v14H6z"/></svg>
-      </button>
+    <div class="play-wrap">
+      <div class="ring" id="ring"></div>
+      <div class="play-btn play" id="playBtn"></div>
     </div>
 
-    <input type="range" id="seekbar" class="seekbar" min="0" max="100">
-    <div class="time">
-      <span id="current">0:00</span>
-      <span id="duration">0:00</span>
-    </div>
+    <button class="ctrl-btn next"></button>
+  </div>
+
+  <div class="seek">
+    <input type="range" min="0" max="100" value="0">
   </div>
 </div>
 
-<script src="https://www.youtube.com/iframe_api"></script>
 <script>
-const album = [
-  { id: "HCoTcCMLRsM", title: "Q", artist: "REBEL" },
-  { id: "p8iNb7sTNiY", title: "ロストワンの号哭", artist: "REBEL" },
-  { id: "uC44M7_srjg", title: "DOGLAND", artist: "REBEL" }
-];
+let playing = false;
+let ring = document.getElementById("ring");
+let playBtn = document.getElementById("playBtn");
 
-let player, index = 0;
-let playing = false, seeking = false;
-let rotationTimer = null;
-let cdMini = false;
+const colors = ["c1","c2","c3","c4","c5"];
+let colorIndex = 0;
 
-const cd = document.getElementById("cd");
-const playIcon = document.getElementById("playIcon");
-const seekbar = document.getElementById("seekbar");
-const playlist = document.getElementById("playlist");
-const stage = document.querySelector(".stage");
-
-function onYouTubeIframeAPIReady() {
-  player = new YT.Player("player", {
-    videoId: album[0].id,
-    playerVars: { playsinline: 1, controls: 0 },
-    events: { onReady, onStateChange }
-  });
+function startRing() {
+  ring.className = "ring " + colors[colorIndex];
+  ring.style.display = "block";
+  setInterval(() => {
+    colorIndex = (colorIndex + 1) % colors.length;
+    ring.className = "ring " + colors[colorIndex];
+  }, 2000);
 }
 
-function onReady() {
-  player.setVolume(0);
-  renderList();
-  updateInfo();
-  loop();
+function stopRing() {
+  ring.style.display = "none";
 }
 
-function onStateChange(e) {
-  if (e.data === YT.PlayerState.PLAYING) startRotation();
-  if (e.data === YT.PlayerState.ENDED) next();
-}
-
-function toggle() { playing ? pause() : play(); }
-
-function play() {
-  player.playVideo();
-  playing = true;
-  playIcon.innerHTML = '<path d="M6 5h4v14H6zm8 0h4v14h-4z"/>';
-}
-
-function pause() {
-  player.pauseVideo();
-  stopRotation();
-  player.setVolume(0);
-  playing = false;
-  playIcon.innerHTML = '<path d="M8 5v14l11-7z"/>';
-}
-
-/* 回転 */
-function startRotation() {
-  if (cd.style.animationPlayState === "running") return;
-  cd.style.animationPlayState = "running";
-  clearTimeout(rotationTimer);
-  rotationTimer = setTimeout(() => player.setVolume(100), 300);
-}
-function stopRotation() {
-  cd.style.animationPlayState = "paused";
-  clearTimeout(rotationTimer);
-}
-
-/* CDタップ */
-cd.onclick = () => {
-  cdMini = !cdMini;
-  cd.classList.toggle("mini", cdMini);
-  stage.classList.toggle("cd-mini", cdMini);
+playBtn.onclick = () => {
+  playing = !playing;
+  playBtn.className = "play-btn " + (playing ? "pause" : "play");
+  playing ? startRing() : stopRing();
 };
-
-/* シーク */
-seekbar.oninput = () => seeking = true;
-seekbar.onchange = () => {
-  player.seekTo((seekbar.value / 100) * player.getDuration(), true);
-  seeking = false;
-};
-
-function loop() {
-  if (player && player.getCurrentTime && !seeking) {
-    const cur = player.getCurrentTime();
-    const dur = player.getDuration();
-    seekbar.value = (cur / dur) * 100;
-    current.textContent = format(cur);
-    duration.textContent = format(dur);
-  }
-  requestAnimationFrame(loop);
-}
-
-/* 曲操作 */
-function loadTrack(i) {
-  index = i;
-  stopRotation();
-  player.setVolume(0);
-  player.loadVideoById(album[index].id);
-  updateInfo();
-  renderList();
-  playing = false;
-  playIcon.innerHTML = '<path d="M8 5v14l11-7z"/>';
-}
-function next() { loadTrack((index + 1) % album.length); }
-function prev() { loadTrack((index - 1 + album.length) % album.length); }
-
-/* プレイリスト */
-function renderList() {
-  playlist.innerHTML = "<h3>アルバム</h3>";
-  album.forEach((t, i) => {
-    const div = document.createElement("div");
-    div.className = "track" + (i === index ? " active" : "");
-    div.innerHTML = `${t.title}<span>${t.artist}</span>`;
-    div.onclick = () => { loadTrack(i); toggleList(); };
-    playlist.appendChild(div);
-  });
-}
-
-function toggleList() {
-  playlist.classList.toggle("open");
-}
-
-function updateInfo() {
-  title.textContent = album[index].title;
-  artist.textContent = album[index].artist;
-}
-
-function format(sec) {
-  const m = Math.floor(sec / 60);
-  const s = Math.floor(sec % 60).toString().padStart(2, "0");
-  return `${m}:${s}`;
-}
 </script>
-
 </body>
 </html>
