--- a/index.html
+++ b/index.html
@@ -1,279 +1,385 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Music Player</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Now Playing</title>
 
 <style>
-:root {
-  --mono-white: #ffffff;
-  --mono-gray: #888;
-  --mono-dark: #111;
-}
-
 body {
   margin: 0;
-  background: #000;
-  color: var(--mono-white);
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+  background: #111;
+  color: #fff;
 }
 
-.player {
+/* ===== ヘッダー ===== */
+.header {
+  position: fixed;
+  top: 12px;
+  right: 16px;
+  z-index: 40;
+}
+.menu-btn {
+  font-size: 26px;
+  cursor: pointer;
+}
+
+/* ===== プレイリスト ===== */
+.playlist {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 260px;
+  height: 100%;
+  background: #181818;
+  padding: 20px;
+  transition: right 0.35s ease;
+  z-index: 35;
+}
+.playlist.open { right: 0; }
+.track {
+  padding: 10px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.track.active { background: #333; }
+.track span {
+  display: block;
+  font-size: 12px;
+  color: #aaa;
+}
+
+/* ===== メイン ===== */
+.container {
+  padding: 44px 15px 20px;
+  text-align: center;
+}
+
+.stage {
   position: relative;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  width: 300px;
+  height: 300px;
+  margin: 20px auto;
 }
 
-/* =====================
-   CD
-===================== */
-.cd {
+/* ===== 動画 ===== */
+.video {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 260px;
-  height: 260px;
-  border-radius: 50%;
-  background: radial-gradient(#444 30%, #111 60%, #000 70%);
+  width: 220px;
+  height: 124px;
   transform: translate(-50%, -50%);
-  z-index: 3;
-  transition: all 0.6s ease;
-}
-
-.cd.mini {
-  width: 110px;
-  height: 110px;
-  top: 8%;
-  left: 8%;
-}
-
-/* =====================
-   Video
-===================== */
-.video-wrapper {
-  position: absolute;
-  inset: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  pointer-events: none;
   z-index: 1;
-  transition: all 0.6s ease;
+}
+.stage.cd-mini .video {
+  width: 360px;
+  height: 202px;
 }
 
-.video-wrapper iframe {
-  width: 90vw;
-  height: 50vw;
-  max-width: 960px;
-  max-height: 540px;
-}
-
-.cd-front .video-wrapper iframe {
-  width: 50vw;
-  height: 28vw;
-  opacity: 0.4;
-}
-
-/* =====================
-   Controls
-===================== */
-.controls {
-  position: absolute;
-  bottom: 60px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  align-items: center;
-  z-index: 5;
-}
-
-/* 曲送り / 戻し */
-.ctrl-btn {
-  width: 44px;
-  height: 44px;
-  background: none;
-  border: none;
-  position: relative;
-  cursor: pointer;
-}
-
-.ctrl-btn::before,
-.ctrl-btn::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  border-style: solid;
-}
-
-/* 戻し */
-.prev::before {
-  border-width: 10px 14px 10px 0;
-  border-color: transparent var(--mono-white) transparent transparent;
-  left: 8px;
-}
-.prev::after {
-  width: 4px;
-  height: 20px;
-  background: var(--mono-white);
-  left: 2px;
-  top: 12px;
-}
-
-/* 送り */
-.next::before {
-  border-width: 10px 0 10px 14px;
-  border-color: transparent transparent transparent var(--mono-white);
-  right: 8px;
-}
-.next::after {
-  width: 4px;
-  height: 20px;
-  background: var(--mono-white);
-  right: 2px;
-  top: 12px;
-}
-
-/* =====================
-   Play Button
-===================== */
-.play-wrap {
-  position: relative;
-  width: 90px;
-  height: 90px;
-}
-
-.play-btn {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background: #000;
-  border: 2px solid #fff;
-  position: absolute;
-  inset: 10px;
-  cursor: pointer;
-}
-
-.play-btn.play::before {
-  content: "";
-  position: absolute;
-  left: 28px;
-  top: 20px;
-  border-style: solid;
-  border-width: 15px 0 15px 22px;
-  border-color: transparent transparent transparent #fff;
-}
-
-.play-btn.pause::before,
-.play-btn.pause::after {
-  content: "";
-  position: absolute;
-  top: 18px;
-  width: 8px;
-  height: 34px;
-  background: #fff;
-}
-.play-btn.pause::before { left: 22px; }
-.play-btn.pause::after { right: 22px; }
-
-/* =====================
-   Ring Animation
-===================== */
-.ring {
+/* ===== CD ===== */
+.cd {
   position: absolute;
   inset: 0;
   border-radius: 50%;
-  border: 3px solid transparent;
-  animation: spin 2s linear infinite;
+  background: url("cd.jpeg") center/cover no-repeat;
+  animation: spin 10s linear infinite;
+  animation-play-state: paused;
+  cursor: pointer;
+  z-index: 5;
+  transition: all 0.45s ease;
 }
-
+.cd.mini {
+  width: 58px;
+  height: 58px;
+  top: -50px;
+  left: -22px;
+}
 @keyframes spin {
   to { transform: rotate(360deg); }
 }
 
-.ring.c1 { border-color: white; }
-.ring.c2 { border-color: red; }
-.ring.c3 { border-color: #7fffd4; }
-.ring.c4 { border-color: #1e90ff; }
-.ring.c5 { border-color: #9b59b6; }
+/* ===== 情報 ===== */
+.title { font-size: 18px; margin-top: 10px; }
+.artist { font-size: 14px; color: #aaa; }
 
-/* =====================
-   Seekbar
-===================== */
-.seek {
-  position: absolute;
-  bottom: 20px;
-  width: 80%;
-  left: 10%;
+/* ===== コントロール ===== */
+.controls {
+  margin-top: 18px;
 }
-input[type="range"] {
+
+.control-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 22px;
+}
+
+/* 共通ボタン（モノクロ） */
+.ctrl-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: #aaa;
+  transition: color 0.2s, transform 0.2s;
+}
+.ctrl-btn:hover {
+  color: #fff;
+  transform: scale(1.05);
+}
+.skip svg {
+  width: 26px;
+  height: 26px;
+  fill: currentColor;
+}
+
+/* ===== 再生ボタン＋リング ===== */
+.play-wrap {
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+
+.play-btn {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background: #000;
+  border: 2px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  inset: 4px;
+  cursor: pointer;
+}
+.play-btn svg {
+  width: 22px;
+  height: 22px;
+  fill: #fff;
+}
+
+/* リング */
+.play-ring {
+  position: absolute;
+  inset: 0;
+  transform-origin: center;
+  display: none;
+}
+.playing .play-ring {
+  display: block;
+  animation:
+    spin 2s linear infinite,
+    ringColor 10s linear infinite;
+}
+.play-ring circle {
+  fill: none;
+  stroke-width: 3;
+  stroke: white;
+}
+
+/* 色変化 */
+@keyframes ringColor {
+  0%   { stroke: white; }
+  20%  { stroke: red; }
+  40%  { stroke: #7fffd4; }
+  60%  { stroke: #1e90ff; }
+  80%  { stroke: #9b59b6; }
+  100% { stroke: white; }
+}
+
+/* ===== シークバー ===== */
+.seekbar {
   width: 100%;
-  appearance: none;
+  margin-top: 16px;
+  -webkit-appearance: none;
+  background: transparent;
+}
+.seekbar::-webkit-slider-runnable-track {
   height: 4px;
   background: #444;
 }
-input[type="range"]::-webkit-slider-thumb {
-  appearance: none;
-  width: 14px;
-  height: 14px;
+.seekbar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 12px;
+  height: 12px;
+  background: #fff;
   border-radius: 50%;
-  background: white;
+  margin-top: -4px;
+}
+
+/* 時間 */
+.time {
+  font-size: 12px;
+  color: #aaa;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4px;
 }
 </style>
 </head>
 
 <body>
-<div class="player cd-front">
-  <div class="cd" id="cd"></div>
 
-  <div class="video-wrapper">
-    <iframe id="video" src="https://www.youtube.com/embed/VIDEO_ID?enablejsapi=1"></iframe>
+<div class="header">
+  <div class="menu-btn" onclick="toggleList()">☰</div>
+</div>
+
+<div class="playlist" id="playlist"></div>
+
+<div class="container">
+  <div class="stage">
+    <div id="player" class="video"></div>
+    <div id="cd" class="cd"></div>
   </div>
+
+  <div class="title" id="title"></div>
+  <div class="artist" id="artist"></div>
 
   <div class="controls">
-    <button class="ctrl-btn prev"></button>
+    <div class="control-row">
 
-    <div class="play-wrap">
-      <div class="ring" id="ring"></div>
-      <div class="play-btn play" id="playBtn"></div>
+      <!-- PREV（修正済） -->
+      <button class="ctrl-btn skip" onclick="prev()">
+        <svg viewBox="0 0 24 24">
+          <path d="M6 5v14l8.5-7zM15 5h3v14h-3z"/>
+        </svg>
+      </button>
+
+      <!-- PLAY -->
+      <div class="play-wrap" id="playWrap">
+        <svg class="play-ring" viewBox="0 0 100 100">
+          <circle cx="50" cy="50" r="46"/>
+        </svg>
+
+        <button class="play-btn" onclick="toggle()">
+          <svg id="playIcon" viewBox="0 0 24 24">
+            <path d="M8 5v14l11-7z"/>
+          </svg>
+        </button>
+      </div>
+
+      <!-- NEXT（修正済） -->
+      <button class="ctrl-btn skip" onclick="next()">
+        <svg viewBox="0 0 24 24">
+          <path d="M18 5v14l-8.5-7zM6 5h3v14H6z"/>
+        </svg>
+      </button>
+
     </div>
 
-    <button class="ctrl-btn next"></button>
-  </div>
-
-  <div class="seek">
-    <input type="range" min="0" max="100" value="0">
+    <input type="range" id="seekbar" class="seekbar" min="0" max="100">
+    <div class="time">
+      <span id="current">0:00</span>
+      <span id="duration">0:00</span>
+    </div>
   </div>
 </div>
 
+<script src="https://www.youtube.com/iframe_api"></script>
 <script>
-let playing = false;
-let ring = document.getElementById("ring");
-let playBtn = document.getElementById("playBtn");
+const album = [
+  { id: "HCoTcCMLRsM", title: "Q", artist: "REBEL" },
+  { id: "p8iNb7sTNiY", title: "ロストワンの号哭", artist: "REBEL" },
+  { id: "uC44M7_srjg", title: "DOGLAND", artist: "REBEL" }
+];
 
-const colors = ["c1","c2","c3","c4","c5"];
-let colorIndex = 0;
+let player, index = 0;
+let playing = false, seeking = false;
 
-function startRing() {
-  ring.className = "ring " + colors[colorIndex];
-  ring.style.display = "block";
-  setInterval(() => {
-    colorIndex = (colorIndex + 1) % colors.length;
-    ring.className = "ring " + colors[colorIndex];
-  }, 2000);
+const cd = document.getElementById("cd");
+const playIcon = document.getElementById("playIcon");
+const playWrap = document.getElementById("playWrap");
+const seekbar = document.getElementById("seekbar");
+
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player("player", {
+    videoId: album[0].id,
+    playerVars: { playsinline: 1, controls: 0 },
+    events: { onReady, onStateChange }
+  });
 }
 
-function stopRing() {
-  ring.style.display = "none";
+function onReady() {
+  renderList();
+  updateInfo();
+  loop();
 }
 
-playBtn.onclick = () => {
-  playing = !playing;
-  playBtn.className = "play-btn " + (playing ? "pause" : "play");
-  playing ? startRing() : stopRing();
-};
+function onStateChange(e) {
+  if (e.data === YT.PlayerState.PLAYING) play();
+  if (e.data === YT.PlayerState.ENDED) next();
+}
+
+function toggle() { playing ? pause() : play(); }
+
+function play() {
+  player.playVideo();
+  cd.style.animationPlayState = "running";
+  playing = true;
+  playWrap.classList.add("playing");
+  playIcon.innerHTML = '<path d="M6 5h4v14H6zm8 0h4v14h-4z"/>';
+}
+
+function pause() {
+  player.pauseVideo();
+  cd.style.animationPlayState = "paused";
+  playing = false;
+  playWrap.classList.remove("playing");
+  playIcon.innerHTML = '<path d="M8 5v14l11-7z"/>';
+}
+
+function loop() {
+  if (player && player.getCurrentTime && !seeking) {
+    const cur = player.getCurrentTime();
+    const dur = player.getDuration();
+    seekbar.value = (cur / dur) * 100;
+    current.textContent = format(cur);
+    duration.textContent = format(dur);
+  }
+  requestAnimationFrame(loop);
+}
+
+function loadTrack(i) {
+  index = i;
+  player.loadVideoById(album[index].id);
+  updateInfo();
+  renderList();
+  pause();
+}
+
+function next() { loadTrack((index + 1) % album.length); }
+function prev() { loadTrack((index - 1 + album.length) % album.length); }
+
+function renderList() {
+  playlist.innerHTML = "<h3>アルバム</h3>";
+  album.forEach((t, i) => {
+    const div = document.createElement("div");
+    div.className = "track" + (i === index ? " active" : "");
+    div.innerHTML = `${t.title}<span>${t.artist}</span>`;
+    div.onclick = () => { loadTrack(i); toggleList(); };
+    playlist.appendChild(div);
+  });
+}
+
+function toggleList() {
+  playlist.classList.toggle("open");
+}
+
+function updateInfo() {
+  title.textContent = album[index].title;
+  artist.textContent = album[index].artist;
+}
+
+function format(sec) {
+  const m = Math.floor(sec / 60);
+  const s = Math.floor(sec % 60).toString().padStart(2, "0");
+  return `${m}:${s}`;
+}
 </script>
+
 </body>
 </html>
