--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@ body {
   top: -50px;
   left: -22px;
 }
+
 @keyframes spin {
-  to { transform: rotate(360deg); }
+  from { transform: rotate(0deg); }
+  to   { transform: rotate(360deg); }
 }
 
 /* ===== 情報 ===== */
@@ -106,9 +108,7 @@ body {
 .artist { font-size: 14px; color: #aaa; }
 
 /* ===== コントロール ===== */
-.controls {
-  margin-top: 18px;
-}
+.controls { margin-top: 18px; }
 
 .control-row {
   display: flex;
@@ -117,7 +117,7 @@ body {
   gap: 22px;
 }
 
-/* 共通ボタン（モノクロ） */
+/* モノクロボタン */
 .ctrl-btn {
   background: none;
   border: none;
@@ -130,7 +130,7 @@ body {
   color: #fff;
   transform: scale(1.05);
 }
-.skip svg {
+.ctrl-btn svg {
   width: 26px;
   height: 26px;
   fill: currentColor;
@@ -139,8 +139,8 @@ body {
 /* ===== 再生ボタン＋リング ===== */
 .play-wrap {
   position: relative;
-  width: 64px;
-  height: 64px;
+  width: 56px;
+  height: 56px;
 }
 
 .play-btn {
@@ -148,12 +148,10 @@ body {
   height: 56px;
   border-radius: 50%;
   background: #000;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  inset: 4px;
   cursor: pointer;
 }
 .play-btn svg {
@@ -165,8 +163,7 @@ body {
 /* リング */
 .play-ring {
   position: absolute;
-  inset: 0;
-  transform-origin: center;
+  inset: -6px;
   display: none;
 }
 .playing .play-ring {
@@ -178,17 +175,15 @@ body {
 .play-ring circle {
   fill: none;
   stroke-width: 3;
-  stroke: white;
 }
 
-/* 色変化 */
 @keyframes ringColor {
-  0%   { stroke: white; }
+  0%   { stroke: #fff; }
   20%  { stroke: red; }
   40%  { stroke: #7fffd4; }
   60%  { stroke: #1e90ff; }
   80%  { stroke: #9b59b6; }
-  100% { stroke: white; }
+  100% { stroke: #fff; }
 }
 
 /* ===== シークバー ===== */
@@ -201,6 +196,7 @@ body {
 .seekbar::-webkit-slider-runnable-track {
   height: 4px;
   background: #444;
+  border-radius: 2px;
 }
 .seekbar::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -211,7 +207,6 @@ body {
   margin-top: -4px;
 }
 
-/* 時間 */
 .time {
   font-size: 12px;
   color: #aaa;
@@ -241,20 +236,16 @@ body {
 
   <div class="controls">
     <div class="control-row">
-
-      <!-- PREV（修正済） -->
-      <button class="ctrl-btn skip" onclick="prev()">
-        <svg viewBox="0 0 24 24">
-          <path d="M6 5v14l8.5-7zM15 5h3v14h-3z"/>
-        </svg>
+      <!-- 戻し -->
+      <button class="ctrl-btn" onclick="prev()">
+        <svg viewBox="0 0 24 24"><path d="M18 5v14l-8.5-7zM6 5h3v14H6z"/></svg>
       </button>
 
-      <!-- PLAY -->
+      <!-- 再生 -->
       <div class="play-wrap" id="playWrap">
         <svg class="play-ring" viewBox="0 0 100 100">
           <circle cx="50" cy="50" r="46"/>
         </svg>
-
         <button class="play-btn" onclick="toggle()">
           <svg id="playIcon" viewBox="0 0 24 24">
             <path d="M8 5v14l11-7z"/>
@@ -262,13 +253,10 @@ body {
         </button>
       </div>
 
-      <!-- NEXT（修正済） -->
-      <button class="ctrl-btn skip" onclick="next()">
-        <svg viewBox="0 0 24 24">
-          <path d="M18 5v14l-8.5-7zM6 5h3v14H6z"/>
-        </svg>
+      <!-- 送り -->
+      <button class="ctrl-btn" onclick="next()">
+        <svg viewBox="0 0 24 24"><path d="M6 5v14l8.5-7zM15 5h3v14h-3z"/></svg>
       </button>
-
     </div>
 
     <input type="range" id="seekbar" class="seekbar" min="0" max="100">
@@ -289,11 +277,15 @@ const album = [
 
 let player, index = 0;
 let playing = false, seeking = false;
+let rotationTimer = null;
+let cdMini = false;
 
 const cd = document.getElementById("cd");
+const stage = document.querySelector(".stage");
 const playIcon = document.getElementById("playIcon");
 const playWrap = document.getElementById("playWrap");
 const seekbar = document.getElementById("seekbar");
+const playlist = document.getElementById("playlist");
 
 function onYouTubeIframeAPIReady() {
   player = new YT.Player("player", {
@@ -304,13 +296,14 @@ function onYouTubeIframeAPIReady() {
 }
 
 function onReady() {
+  player.setVolume(0);
   renderList();
   updateInfo();
   loop();
 }
 
 function onStateChange(e) {
-  if (e.data === YT.PlayerState.PLAYING) play();
+  if (e.data === YT.PlayerState.PLAYING) startRotation();
   if (e.data === YT.PlayerState.ENDED) next();
 }
 
@@ -318,7 +311,6 @@ function toggle() { playing ? pause() : play(); }
 
 function play() {
   player.playVideo();
-  cd.style.animationPlayState = "running";
   playing = true;
   playWrap.classList.add("playing");
   playIcon.innerHTML = '<path d="M6 5h4v14H6zm8 0h4v14h-4z"/>';
@@ -326,34 +318,69 @@ function play() {
 
 function pause() {
   player.pauseVideo();
-  cd.style.animationPlayState = "paused";
+  stopRotation();
+  player.setVolume(0);
   playing = false;
   playWrap.classList.remove("playing");
   playIcon.innerHTML = '<path d="M8 5v14l11-7z"/>';
 }
 
+/* 回転 */
+function startRotation() {
+  if (cd.style.animationPlayState === "running") return;
+  cd.style.animationPlayState = "running";
+  clearTimeout(rotationTimer);
+  rotationTimer = setTimeout(() => player.setVolume(100), 300);
+}
+function stopRotation() {
+  cd.style.animationPlayState = "paused";
+  clearTimeout(rotationTimer);
+}
+
+/* CDタップ */
+cd.onclick = () => {
+  cdMini = !cdMini;
+  cd.classList.toggle("mini", cdMini);
+  stage.classList.toggle("cd-mini", cdMini);
+};
+
+/* シーク */
+seekbar.oninput = () => seeking = true;
+seekbar.onchange = () => {
+  player.seekTo((seekbar.value / 100) * player.getDuration(), true);
+  seeking = false;
+};
+
 function loop() {
-  if (player && player.getCurrentTime && !seeking) {
-    const cur = player.getCurrentTime();
-    const dur = player.getDuration();
-    seekbar.value = (cur / dur) * 100;
-    current.textContent = format(cur);
-    duration.textContent = format(dur);
-  }
+  if (!player || seeking) return requestAnimationFrame(loop);
+
+  const dur = player.getDuration();
+  if (!dur) return requestAnimationFrame(loop);
+
+  const cur = player.getCurrentTime();
+  seekbar.value = (cur / dur) * 100;
+  current.textContent = format(cur);
+  duration.textContent = format(dur);
+
   requestAnimationFrame(loop);
 }
 
+/* 曲操作 */
 function loadTrack(i) {
   index = i;
+  stopRotation();
+  player.setVolume(0);
   player.loadVideoById(album[index].id);
   updateInfo();
   renderList();
-  pause();
+  playing = false;
+  playWrap.classList.remove("playing");
+  playIcon.innerHTML = '<path d="M8 5v14l11-7z"/>';
 }
-
 function next() { loadTrack((index + 1) % album.length); }
 function prev() { loadTrack((index - 1 + album.length) % album.length); }
 
+/* プレイリスト */
 function renderList() {
   playlist.innerHTML = "<h3>アルバム</h3>";
   album.forEach((t, i) => {
